Fixing sweetalert z-index.

--- a/darcyWeb/app/assets/stylesheets/map.scss
+++ b/darcyWeb/app/assets/stylesheets/map.scss
@@ -350,3 +350,6 @@ html {
 .swal2-container.fade {
  opacity: inherit;
 }
+.swal2-container {
+ z-index: 10000;
+}
